Wed Nov 24 17:38:45 PST 1999 Manish Singh <yosh@gimp.org>

	* Made 1.1.12 release

Wed Nov 24 15:26:21 PST 1999 Manish Singh <yosh@gimp.org>

	* configure.in: version number bump; add check for standalone
	gtkxmhtml from Sesse

	* app/gimppreviewcache.c: applied gimp-yasuhiro-19991122-1, prevents
	div by zero error

	* plug-ins/script-fu/script-fu-scripts.c: INIT_I18N_UI before
	gtk_init, reported by yasuhiro

	* plug-ins/common/mapcolor.c
	* plug-ins/common/sunras.c
	* plug-ins/fits/fits.c: applied gimpkirchgessner-991121-[0-2],
	i18n and sundry bug fixes

1999-11-24  Tuomas Kuosmanen  <tigert@gimp.org>

	* plug-ins/perl/examples/perlotine: Fixed some changed stuff, 
	mostly gimp_image_get_guide_orientation()'s types (from 
	GUIDE_HORIZONTAL to HORIZONTAL (and vertical respectively). Also
	changed the image->convert_indexed() call and parameters that were 
	wrong.

Wed Nov 24 01:23:34 MET 1999  Sven Neumann <sven@gimp.org>

	* app/preferences_dialog.c: be more instructive about the
	speed tradeoff of the interpolation type.

	* plug-ins/common/jpeg.c: reorder the menu for DCT setting, so
	the order matches the speed/quality

Wed Nov 24 00:45:27 MET 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/AlienMap/AlienMap.c
	* plug-ins/AlienMap2/AlienMap2.c
	* plug-ins/FractalExplorer/FractalExplorer.c
	* plug-ins/MapObject/mapobject_main.c
	* plug-ins/common/blinds.c
	* plug-ins/common/curve_bend.c
	* plug-ins/common/deinterlace.c
	* plug-ins/common/despeckle.c
	* plug-ins/common/diffraction.c
	* plug-ins/common/displace.c
	* plug-ins/common/edge.c
	* plug-ins/common/emboss.c
	* plug-ins/common/engrave.c
	* plug-ins/common/exchange.c
	* plug-ins/common/flarefx.c
	* plug-ins/common/fractaltrace.c
	* plug-ins/common/gauss_iir.c
	* plug-ins/common/gauss_rle.c
	* plug-ins/common/gee.c
	* plug-ins/common/glasstile.c
	* plug-ins/common/gqbist.c
	* plug-ins/common/hot.c
	* plug-ins/common/illusion.c
	* plug-ins/common/iwarp.c
	* plug-ins/common/jigsaw.c