@@ -587,8 +587,8 @@ blend_motion (Tool           *tool,
 			       &blend_tool->endx, &blend_tool->endy, FALSE, 1);
 
 
-  /* Restrict to multiples of 15 degrees if shift is pressed */
-  if (mevent->state & GDK_SHIFT_MASK)
+  /* Restrict to multiples of 15 degrees if ctrl is pressed */
+  if (mevent->state & GDK_CONTROL_MASK)
     {
       int tangens2[6] = {  34, 106, 196, 334, 618, 1944 };
       int cosinus[7]  = { 256, 247, 222, 181, 128, 66, 0 };
@@ -608,58 +608,6 @@ blend_motion (Tool           *tool,
 	    }
 	  dx = dx > 0 ? (cosinus[6-i] * radius) >> 8 : - ((cosinus[6-i] * radius) >> 8);
 	  dy = dy > 0 ? (cosinus[i] * radius) >> 8 : - ((cosinus[i] * radius) >> 8);
-	}
-      blend_tool->endx = blend_tool->startx + dx;
-      blend_tool->endy = blend_tool->starty + dy;
-    }
-  /* Use another way to restrict to multiples of 15 degrees if ctrl is pressed */
-  else if (mevent->state & GDK_CONTROL_MASK)
-    {
-      int tangens[5]  = { 69, 148, 256, 443, 955 };
-      int tangens2[6] = { 34, 106, 196, 334, 618, 1944 };
-      int dx, dy, i, frac;
-
-      dx = blend_tool->endx - blend_tool->startx;
-      dy = blend_tool->endy - blend_tool->starty;
-
-      if (dy)
-	{
-	  frac = abs ((dx << 8) / dy);
-	  for (i = 0; i < 6; i++)
-	    {
-	      if (frac < tangens2[i])
-		break;  
-	    }
-	  switch (i)
-	    {
-	    case (0):
-	      dx = 0;
-	      break;
-	    case (1):
-	    case (2):
-	      dx = dx * dy > 0 ? 
-		(tangens[i-1] * dy) / 256 : - ((tangens[i-1] * dy) / 256);
-	      break;
-	    case (3):
-	      if (abs (dx) < abs (dy))
-		dx = dx * dy > 0 ? 
-		  (tangens[i-1] * dy) / 256 : - ((tangens[i-1] * dy) / 256);
-	      else
-		dy = dx * dy > 0 ? 
-		  (tangens[5-i] * dx) / 256 : - ((tangens[5-i] * dx) / 256);
-	      break;
-	    case (4):
-	    case (5):
-	      dy = dx * dy > 0 ? 
-		  (tangens[5-i] * dx) / 256 : - ((tangens[5-i] * dx) / 256);
-	      break;
-	    case (6):
-	      dy = 0;
-	      break;
-	    default:
-	      g_warning ("blend_motion: should never be reached!");
-	      break;
-	    }
 	}
       blend_tool->endx = blend_tool->startx + dx;
       blend_tool->endy = blend_tool->starty + dy;
